--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,7 +202,7 @@
     <string name="repay_date">Repay Date:</string>
     <string name="paid">Paid</string>
     <string name="paid_on">Paid on: </string>
-    <string name="date">Date</string>
+    <string name="date">Date:</string>
     <string name="pay_now">Pay Now</string>
 
 
