--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="see_you_quality">See if you qualify</string>
     <string name="thank_you">Thank you!</string>
     <string name="upload_selfie_picture">Upload selfie picture and write your name</string>
+    <string name="upload_id_picture">Upload your ID picture &amp; choose your ID type &amp; enter your ID number</string>
+    <string name="continue_to_login">Continue to login</string>
 
     <!--Password section-->
     <string name="password">Password</string>
@@ -81,7 +83,7 @@
     <string name="required_emp_city">Required Employer City</string>
     <string name="required_business_name">Required Business Name</string>
     <string name="required_tin_number">Required TIN Number</string>
-    <string name="required_id_number">Required ID Number</string>
+    <string name="required_id_number">Required Valid ID Number</string>
     <string name="required_id_type">Required ID Type</string>
 
     <!--Navigation-->
@@ -139,6 +141,9 @@
     <string name="tin_number">TIN Number:</string>
     <string name="id_type">ID Type:</string>
     <string name="id_number">ID Number:</string>
+    <string name="choose_id_type">Choose Id Type:</string>
+    <string name="choose_type_id">Choose Id Type</string>
+    <string name="enter_id_number">Enter ID Number</string>
 
 
     <!--Dashboard-->
