--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,7 +267,7 @@
     <string name="name_of_emp">Employer</string>
     <string name="emp_department">Department</string>
     <string name="emp_position">Designation</string>
-    <string name="emp_id">Employee Id</string>
+    <string name="emp_id">Employee ID</string>
     <string name="emp_city">City/Town</string>
 
     <!--Business Info-->
