--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,7 +283,7 @@
     <!--Loan-->
     <string name="loan_plan_details">Loan Plan Details</string>
     <string name="description_of_loan_purpose">Loan Purpose</string>
-    <string name="choose_loan_purpose_description">Choose Purpose</string>
+    <string name="choose_loan_purpose_description">Choose Purpose:</string>
     <string name="choose_description">Select Purpose</string>
     <string name="loan_purpose_description">Describe Your Purpose:</string>
     <string name="enter_purpose">Enter Purpose</string>
