--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,9 @@
     <string name="required_phone_email">Please enter a valid phone number / email address.</string>
     <string name="required_phone">Please enter valid phone number.</string>
     <string name="required_password">Please enter the password.</string>
+    <string name="required_pin_code">Required six digit Pincode.</string>
+    <string name="required_confirm_pin_code">Required six digit confirm Pincode.</string>
+    <string name="confirm_pin_code_not_match">Confirm pincode do not match.</string>
     <string name="enter_current_password">Please enter the current password.</string>
     <string name="enter_new_password">Please enter the new password.</string>
     <string name="enter_confirm_password">Retype the new password to confirm.</string>
