--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,5 +330,8 @@
     <string name="select_investment_plan">Select one investment plan</string>
     <string name="apply_an_investment_note">Your Investment with L-Pesa account has a generous annual interest rate starting from 8% up to 18% annually. You can invest and withdraw your interest funds with fixed \"monthly exit points\" on the investing amount. The longer you invest with L-Pesa, the better the benefits that you will experience. </string>
 
-
+    <!--Token-->
+    <string name="token_transfer">Token Transfer</string>
+    <string name="transfer_history">Transfer History</string>
+    <string name="interest_history">Interest History</string>
 </resources>
