--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -335,10 +335,13 @@
     <string name="lock">Lock</string>
     <string name="unlock">Unlock</string>
     <string name="transfer_token">Transfer Token</string>
+    <string name="actual_token_values">Actual Tokens Values</string>
     <string name="required_token_amount">Required Token Amount</string>
     <string name="token_transfer">Token Transfer</string>
     <string name="transfer_history">Transfer History</string>
     <string name="interest_history">Interest History</string>
+    <string name="narration">Narration</string>
+    <string name="interest_amount">Interest Amount</string>
     <string name="lpk_savings">LPK Savings</string>
     <string name="token_transfer_text">This is how it is all coming together.
         Once you have L-Pesa Kripton, also known as LPK,then you
