--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -345,6 +345,8 @@
     <string name="interest_amount">Interest Amount</string>
     <string name="lpk_savings">LPK Savings</string>
     <string name="lpk">LPK</string>
+    <string name="from_date">From Date</string>
+    <string name="to_date">To Date</string>
     <string name="search">Search</string>
     <string name="savings">Savings</string>
     <string name="withdrawal">Withdrawal</string>
