--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -336,6 +336,7 @@
     <string name="star_line">************************************************************</string>
     <string name="unlock">Unlock</string>
     <string name="transfer_token">Transfer Token</string>
+    <string name="filter">Filter</string>
     <string name="actual_token_values">Actual Tokens Values</string>
     <string name="required_token_amount">Required Token Amount</string>
     <string name="token_transfer">Token Transfer</string>
