--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,9 +342,13 @@
     <string name="token_transfer">Token Transfer</string>
     <string name="transfer_history">Transfer History</string>
     <string name="interest_history">Interest History</string>
+    <string name="token_withdrawal">Token Withdrawal</string>
+    <string name="withdrawal_history">Withdrawal History</string>
+    <string name="wallet_address">Wallet Address</string>
     <string name="narration">Narration</string>
     <string name="interest_amount">Interest Amount</string>
     <string name="lpk_savings">LPK Savings</string>
+    <string name="lpk_withdrawal">LPK Withdrawal</string>
     <string name="lpk">LPK</string>
     <string name="from_date">From Date</string>
     <string name="to_date">To Date</string>
@@ -362,4 +366,5 @@
         they are locked up for a period of 30 days to help you avail the long-term benefit!\n\n
         If you have been blacklisted or you are a loan defaulter, you are not entitled to get the benefits.
     </string>
+
 </resources>
