--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,6 +353,8 @@
     <string name="lpk">LPK</string>
     <string name="from_date">From Date</string>
     <string name="to_date">To Date</string>
+    <string name="from_amount">From Amount</string>
+    <string name="to_amount">To Amount</string>
     <string name="search">Search</string>
     <string name="savings">Savings</string>
     <string name="withdrawal">Withdrawal</string>
