--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,6 +182,7 @@
     <string name="days">Days </string>
     <string name="duration">Duration:</string>
     <string name="interest_rate">Interest Rate:</string>
+    <string name="interest_day">Interest/Day:</string>
     <string name="rate">Rate</string>
     <string name="empty_loan_history_message">You have\'t applied for any loans yet from L-pesa. Start your journey to financial freedom with the first loan from L-pesa.</string>
     <string name="empty_loan_plan_message">We are not offering loans in your country at the moment. We will send you SMS on your mobile number to notify you when service starts in your country. Stay tuned.</string>
@@ -221,6 +222,7 @@
     <string name="processing_fee">Processing Fee(%)</string>
     <string name="current_credit_score">Current Credit Score:</string>
     <string name="actual_loan_amount">Actual Loan Amount</string>
+    <string name="approx_loan_amount">Approx Loan Amount</string>
     <string name="total_payback">Total Payback:</string>
     <string name="pay_full_amount">Pay Full Amount</string>
     <string name="repay_amount">Repay Amount:</string>
