--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -381,5 +381,7 @@
     <string name="required_wallet_address">Required wallet address</string>
     <string name="required_valid_wallet_address">Ether Address is not match</string>
     <string name="ether_scan_url">Etherscan URL</string>
+    <string name="lpk_withdrawal_text">Send us a request if you wish to withdraw LPK to your Ethereum wallet. We will process your request within 48 hours of application. View the status of your application in "Withdrawal History.</string>
+    <string name="lpk_saving_text">Earn interest every week for the LPK within your savings wallet. This helps to maintain a healthy ratio of supply and demand, will elevate LPK\'s value that you have while you receive benefits on top of the tokens.</string>
 
 </resources>
