--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -331,6 +331,8 @@
     <string name="choose_a_plan">Choose a plan</string>
     <string name="provide_amount">Amount</string>
     <string name="deposit">Deposit</string>
+    <string name="reinvestment">Reinvestment</string>
+    <string name="exit_point">Exit Point</string>
     <string name="required_investment_amount">Required investment amount</string>
     <string name="select_investment_plan">Select one investment plan</string>
     <string name="apply_an_investment_note">Your Investment with L-Pesa account has a generous annual interest rate starting from 8% up to 18% annually. You can invest and withdraw your interest funds with fixed \"monthly exit points\" on the investing amount. The longer you invest with L-Pesa, the better the benefits that you will experience. </string>
